<resources>
    <string name="app_name">Scytale</string>
    <string name="please_fill_signup_form">Please Fill SignUp Form</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="signup">SignUp</string>
    <string name="type_message_here">Type message here…</string>
    <string name="user_details">User Details</string>
    <string name="clear">Clear</string>
</resources>